// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AVGDetail No result Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="AVG persoonsgegevens"
          class="ChapterIcon"
          fill="black"
        >
          AVG-verzoeken.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/avg"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          AVG persoonsgegevens
        </a>
        <h2
          class="Heading Heading__large"
        >
          AVG verzoek
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <div
        class="Alert warning"
      >
        <svg
          aria-hidden="true"
          class="Icon"
        >
          Alert.svg
        </svg>
         
        <p>
          We kunnen op dit moment geen gegevens tonen.
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`AVGDetail With result Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="AVG persoonsgegevens"
          class="ChapterIcon"
          fill="black"
        >
          AVG-verzoeken.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/avg"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          AVG persoonsgegevens
        </a>
        <h2
          class="Heading Heading__large"
        >
          AVG verzoek
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Nummer
        </h3>
        <p
          class="Value"
        >
          223
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Type verzoek
        </h3>
        <p
          class="Value"
        >
          Verwijderen gegevens
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Onderwerp(en)
        </h3>
        <p
          class="Value"
        >
          Vergunningen
        </p>
      </div>
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Toelichting
        </h3>
        <p
          class="Value"
        >
          -
        </p>
      </div>
    </div>
    <div
      class="StatusLine AvgStatusLines"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Ontvangen
              </strong>
              <time
                class="StatusDate"
              >
                09 maart 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                In behandeling
              </strong>
              <time
                class="StatusDate"
              >
                16 maart 2023
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              />
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end-active ConnectLine--end-checked"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Afgehandeld
              </strong>
              <time
                class="StatusDate"
              >
                19 maart 2023
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                Uw verzoek is afgehandeld. U ontvangt hierover bericht per e-mail of per brief.
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
